XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Duplicate_Merged__e.object
<CustomObject>
    <fields>
        <fullName>CRMfusionDBR101__Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Master_Record_Id__c</fullName>
        <label>Master Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Merged_Record_Id__c</fullName>
        <label>Merged Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Id__c</fullName>
        <label>Scenario Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate Merged</label>
    <pluralLabel>Duplicates Merged</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>